# devops-tools

./: .gitignore  README.md  template_autoscaling.py  template_cloudwatch.py  template_codedeploy.py  template_dynamodb.py  template_dynamodb_lsi.py  template_elb.py  template_iamuser.py  template_route53_cname.py  test-template.py
Ansible/: ansible.cfg  codedeploy-test.yml  ec2.ini  helloworld.yml  hosts  ping.yml
Helm/: chart.yml
Terraform/: codebuild.tf  elasticache.tf  iam_group.tf  iam_group_cloudwatch.tf  iam_user.tf  kinesis.tf  provider.tf  rds.tf  subnet.tf  terraform.tfstate  vpc.tf  vpc_lattice.tf
Troposphere/: template_codecommit.py  test-template.py
aws-logs-insights/: display.ql  filter.ql  replace.ql  timestamps.ql
cni-plugin/: go.mod  main.go
diagrams/: aws_compound.py  eks.py  fantastic_barnacle.py  k8s.py  vpc_test.py
ebpf/: .gitignore  Makefile  counter.c  gen.go  go.mod  main.go  map_spinlock.c  map_spinlock.go  nat.c  nat_impl.go
ec2-ecr/: .gitignore  README.md  push.sh
eks/: README.md
github-workflow/: node-docker-dockerhub.yaml  rust-docker-ecr.yaml
misc/eks-may/starter/: .env  Cargo.toml  Dockerfile  start_local.sh
misc/eks-may/starter/src/: bootstrap.rs  confs.rs  lib.rs  main.rs  middleware.rs  middleware_new.rs  side_runner.rs  startup.rs  static_instance.rs
misc/eks-may/starter/src/domain/: user.rs
misc/eks-may/starter/src/persistence/: connector.rs  database_connector.rs  mod.rs
misc/eks-may/starter/src/user/: adapter.rs  entity.rs  mod.rs  user.rs
misc/eks-may/starter/tests/: e2e.rs  init.rs  test_user_service.rs
(+434 files in other folders)
